force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/LeadTracker_Pipeline_Stage__mdt.object-meta.xml
<CustomObject>
    <description>Configures pipeline stages for the Lead Tracker application. Each record maps to a Lead Status picklist value and controls its visual representation in the pipeline board.</description>
    <label>Lead Tracker Pipeline Stage</label>
    <pluralLabel>Lead Tracker Pipeline Stages</pluralLabel>
</CustomObject>