force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/fields/Color_Hex__c.field-meta.xml
<CustomField>
    <fullName>Color_Hex__c</fullName>
    <description>Hex color code for the stage column accent (e.g., #0176D3). Applied as the column header background and badge color.</description>
    <label>Color Hex</label>
    <length>7</length>
    <type>Text</type>
</CustomField>