force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of this pipeline stage shown in admin UI and tooltips.</description>
    <label>Description</label>
    <length>500</length>
    <type>TextArea</type>
</CustomField>