force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>SLDS icon name for this stage column header (e.g., standard:lead, utility:call, utility:check).</description>
    <label>Icon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>