force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Controls visibility of this stage on the pipeline board. Inactive stages are hidden without requiring metadata deletion.</description>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>