force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <description>Marks this as a terminal stage. Closed stages render with visual distinction on the pipeline board.</description>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>