force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/fields/Is_Won__c.field-meta.xml
<CustomField>
    <fullName>Is_Won__c</fullName>
    <description>Marks this as a positive outcome stage. Won stages show success styling and contribute to conversion metrics.</description>
    <defaultValue>false</defaultValue>
    <label>Is Won</label>
    <type>Checkbox</type>
</CustomField>