force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Determines left-to-right column order on the pipeline board. Lower numbers appear first.</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>