force-app/main/default/objects/LeadTracker_Pipeline_Stage__mdt/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>Maps to the Lead.Status picklist value. Must match exactly for board grouping to work.</description>
    <label>Stage Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>